cs35l/18/lab3/hw3.txt
Wang, Zheng (404855295)
CS35L hw3.txt


Q1. Does the patch improve the performance of ls or make it worse? Briefly
    explain.

Answer:
    From the test I've done in lab, the patch should improve the performance
    of the 'ls' command. There are two main reasons for this:
    1.  In terms of time performance, I did not notice any significant changes
        between the two. Thus, the patch should not impact the time performance
        of 'ls' significantly.
    2.  In terms of correctness, the patched 'ls' works better than the old
        version. This is because in the lab, I have shown that the patched
        'ls' successfully fixed the bug that '-a' always overrides '-A'.
        Also, since the outputs of the patched 'ls' and buggy 'ls' only differ
        in "." and "..", so the patched 'ls' will do the correct job.
    Thus, I think the patch has improved the performance of 'ls'

-------------------------------------------------------------------------------

Q2. If your company adopts this patched version of Coreutils instead of the
    default one, what else should you watch out for? Might this new version
    of Coreutils introduce other problems with your application?

Answer:
    The patched version of 'ls' has the original bug fixed. Also, I did not
    notice any new bugs introduced by the patch during the test. So, I think
    there isn't anything that one should watch out for.

    One problem I can see is that latter updates of the command may be based
    on the old, buggy version instead of the patched version. But, I think
    when later release is made, the existence of patch will be considered, so
    the patch will not affect the installation.

    Another problem is that this patch could introduce inconsistence between
    my company and other companies who choose NOT to adopt this patch.
    However, I think this would not be very likely.

-------------------------------------------------------------------------------

Q3. What happens when this script is invoked on an empty file like /dev/null,
    and why?

Answer:
    By running the command:
        python randline.py /dev/null

    It returns an error with the following message:
        Traceback (most recent call last):
        File "randline.py", line 70, in <module>
            main()
        File "randline.py", line 64, in main
            sys.stdout.write(generator.chooseline())
        File "randline.py", line 34, in chooseline
            return random.choice(self.lines)
        File "/usr/local/cs/Python-2.7.14/lib/python2.7/random.py", line 277,
        in choice
            return seq[int(self.random() * len(seq))]  # raises IndexError if
            seq is empty
        IndexError: list index out of range

    From the error message, I traceback to find that the error is caused by
    line 277 in the file /usr/local/cs/Python-2.7.14/lib/python2.7/random.py,
    where 'choice()' is defined.
    From the comment in the line that returns error, it's likely that an empty
    seq is created when we invoke randline.py with an empty file and thus
    cause the IndexError.

-------------------------------------------------------------------------------

Q4. What happens when this script is invoked with Python 3 rather than Python
    2, and why? (You can run Python 3 on the SEASnet hosts by using the
    command python3 instead of python.)

Answer:
    I first create a file python3_test.txt containing 5 lines of "testing
    randline on python 3."

    Then I run the command:
        python3 randline.py python3_test.txt

    It returns an error with the following message:
      File "randline.py", line 65
          except IOError as (errno, strerror):
                            ^
    SyntaxError: invalid syntax

    This SyntaxError, I believe, is caused by the difference in the syntax in
    python2 and python3. Python3 no longer allow tuples in the 'except'
    statement since in python3, tuples are not automatically unpacked in
    'except' statement. So the tuple is passed as an entity in python3, and
    thus causes SyntaxError.

-------------------------------------------------------------------------------
